--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
-	<p>This is a demo. There is not much here.</p>
+	<p>This is a demo. There is not much here except a giant circle.</p>
+	<div id="circle"> </div>
 
 </body>	
